; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kevent_put_kq.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kern_event.c_kevent_put_kq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }
%struct.fileproc = type { i32 }
%struct.kqueue = type { i32 }

@KQ_WORKQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.proc*, i64, %struct.fileproc*, %struct.kqueue*)* @kevent_put_kq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kevent_put_kq(%struct.proc* %0, i64 %1, %struct.fileproc* %2, %struct.kqueue* %3) #0 {
  %5 = alloca %struct.proc*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.fileproc*, align 8
  %8 = alloca %struct.kqueue*, align 8
  store %struct.proc* %0, %struct.proc** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.fileproc* %2, %struct.fileproc** %7, align 8
  store %struct.kqueue* %3, %struct.kqueue** %8, align 8
  %9 = load %struct.proc*, %struct.proc** %5, align 8
  %10 = load %struct.kqueue*, %struct.kqueue** %8, align 8
  %11 = call i32 @kqueue_release_last(%struct.proc* %9, %struct.kqueue* %10)
  %12 = load %struct.fileproc*, %struct.fileproc** %7, align 8
  %13 = icmp ne %struct.fileproc* %12, null
  br i1 %13, label %14, label %28

14:                                               ; preds = %4
  %15 = load %struct.kqueue*, %struct.kqueue** %8, align 8
  %16 = getelementptr inbounds %struct.kqueue, %struct.kqueue* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @KQ_WORKQ, align 4
  %19 = and i32 %17, %18
  %20 = icmp eq i32 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load %struct.proc*, %struct.proc** %5, align 8
  %24 = load i64, i64* %6, align 8
  %25 = trunc i64 %24 to i32
  %26 = load %struct.fileproc*, %struct.fileproc** %7, align 8
  %27 = call i32 @fp_drop(%struct.proc* %23, i32 %25, %struct.fileproc* %26, i32 0)
  br label %28

28:                                               ; preds = %14, %4
  ret void
}

declare dso_local i32 @kqueue_release_last(%struct.proc*, %struct.kqueue*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @fp_drop(%struct.proc*, i32, %struct.fileproc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
